<resources>
    <string name="app_name">SneakerShip</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="sneakership">SNEAKERSHIP</string>
    <string name="popular">Popular</string>
    <string name="sort_by">Sort by</string>
    <string name="check_connection">Check you internet connection</string>
    <string name="no_result">No Result</string>
    <string name="size_uk">Size (uk) :</string>
    <string name="colour">Colour :</string>
    <string name="price">Price : </string>
    <string name="add_to_cart">Add to cart</string>
    <string name="cart">Cart</string>
    <string name="order_details">Order details</string>
    <string name="subtotal_placeholder">Subtotal : $%1$s</string>
    <string name="texes_placeholder">Texes and Charges : $%1$s</string>
    <string name="total">Total:</string>
    <string name="check_out">Check Out</string>
    <string name="cart_is_empty">Cart is empty</string>
    <string name="price_placeholder">$%1$s</string>
    <string name="home">Home</string>
    <string name="blank">blank</string>
    <string name="order_placed">Your order is placed!</string>
    <string name="congratulations">Congratulations.</string>
    <string name="go_home">Go Home</string>
    <string name="relevant">Relevant</string>
    <string name="price_lowest">Price: Lowest</string>
    <string name="price_highest">Price: Highest</string>
</resources>