<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_orange"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".post_order.presentation.activity.PostOrderActivity">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:layout_width="180dp"
        android:layout_height="180dp"
        app:lottie_rawRes="@raw/lottie_done"
        app:lottie_autoPlay="true"
        app:lottie_loop="false"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/congratulations"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:layout_marginTop="6dp"
        android:text="@string/order_placed"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnHome"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/white"
        android:paddingVertical="16dp"
        android:text="@string/go_home"
        android:layout_marginTop="26dp"
        android:textColor="@color/primary_orange"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:cornerRadius="16dp" />

</LinearLayout>