<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".cart.presentation.activity.CartActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottomNavView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintCart"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="match_parent"
            android:padding="24dp">

            <TextView
                android:id="@+id/tvCartHeader"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_semibold"
                android:gravity="center_horizontal"
                android:maxLines="1"
                android:text="@string/cart"
                android:textColor="@color/primary_orange"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvCartItems"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginVertical="16dp"
                app:layout_constraintBottom_toTopOf="@+id/guideline3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvCartHeader" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.6" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/guideline3">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:maxLines="1"
                    android:text="@string/order_details"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    app:drawableEndCompat="@drawable/ic_info"
                    app:drawableTint="@color/primary_orange" />

                <TextView
                    android:id="@+id/tvSubTotal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/poppins"
                    android:maxLines="1"
                    android:text="@string/subtotal_placeholder"
                    android:textColor="@color/text_grey"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvTaxes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:fontFamily="@font/poppins"
                    android:maxLines="1"
                    android:text="@string/texes_placeholder"
                    android:textColor="@color/text_grey"
                    android:textSize="16sp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins"
                        android:maxLines="1"
                        android:text="@string/total"
                        android:textColor="@color/text_grey"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvTotal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="14dp"
                        android:fontFamily="@font/poppins_semibold"
                        android:gravity="center"
                        android:maxLines="1"
                        android:text="$0"
                        android:textColor="@color/primary_orange"
                        android:textSize="18sp" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnCheckout"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/primary_orange"
                        android:paddingVertical="16dp"
                        android:text="@string/check_out"
                        android:textAllCaps="false"
                        app:cornerRadius="14dp" />

                </LinearLayout>

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tvEmptyCart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/cart_is_empty"
            android:gravity="center"
            android:fontFamily="@font/poppins_medium"
            android:maxLines="1"
            android:textColor="@color/text_grey"
            android:textSize="14sp" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:elevation="10dp"
            android:layout_gravity="center" />

    </FrameLayout>

    <include
        android:id="@+id/bottomNavView"
        layout="@layout/bottom_navigation"
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content" />

</RelativeLayout>